<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ConnectionInfoActivity"
    android:background="@drawable/ds">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mw_server"
        android:id="@+id/serverTitle"
        android:layout_alignParentTop="true"
        android:enabled="false"
        android:background="@android:drawable/checkbox_off_background"
        android:typeface="serif"
        android:gravity="center"
        android:textSize="28sp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:id="@+id/ipEditText"
        android:inputType="number|text"
        android:textStyle="bold"
        android:background="@drawable/border3"
        android:textColorHighlight="@android:color/black"
        android:textColor="@android:color/black"
        android:layout_above="@+id/port"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="83dp" />

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/nextBtn"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="60dp"
        android:enabled="false"
        android:textColor="@android:color/black"
        android:textColorHighlight="@android:color/black"
        android:background="@drawable/border" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/ip"
        android:id="@+id/ipAddress"
        android:textColor="@android:color/black"
        android:background="@drawable/border"
        android:typeface="monospace"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_above="@+id/ipEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:id="@+id/portEditText"
        android:textStyle="bold"
        android:background="@drawable/border3"
        android:textColorHighlight="@android:color/black"
        android:textColor="@android:color/black"
        android:inputType="number|text"
        android:layout_above="@+id/nextBtn"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="41dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/port"
        android:id="@+id/port"
        android:textColor="@android:color/black"
        android:background="@drawable/border"
        android:typeface="monospace"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_above="@+id/portEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mwNumber"
        android:id="@+id/mwNumber"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
