<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CoordinatesActivity"
    android:background="@drawable/coords">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/coords"
        android:id="@+id/coordsTitle"
        android:enabled="false"
        android:background="@android:drawable/checkbox_off_background"
        android:typeface="serif"
        android:gravity="center"
        android:textSize="28sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


    <Button
        android:layout_width="190dp"
        android:layout_height="35dp"
        android:text="@string/start"
        android:id="@+id/startBtn"
        android:enabled="false"
        android:textColor="@android:color/black"
        android:textColorHighlight="@android:color/black"
        android:background="@drawable/border"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="379dp"
        android:background="@drawable/border2"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/minLatitude"
            android:id="@+id/minLatitudeTV"
            android:textColor="@android:color/black"
            android:background="@drawable/border"
            android:typeface="monospace"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="-4dp" />

        <EditText
            android:layout_width="295dp"
            android:layout_height="33dp"
            android:id="@+id/minLatitudeET"
            android:textStyle="bold"
            android:background="@drawable/border3"
            android:textColorHighlight="@android:color/black"
            android:textColor="@android:color/black"
            android:layout_marginTop="3dp"
            android:layout_gravity="center_horizontal"
            android:inputType="number|text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/maxLatitude"
            android:id="@+id/maxLatitudeTV"
            android:textColor="@android:color/black"
            android:background="@drawable/border"
            android:typeface="monospace"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="-4dp"
            android:layout_marginTop="3dp" />

        <EditText
            android:layout_width="295dp"
            android:layout_height="33dp"
            android:id="@+id/maxLatitudeET"
            android:textStyle="bold"
            android:background="@drawable/border3"
            android:textColorHighlight="@android:color/black"
            android:textColor="@android:color/black"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="3dp"
            android:inputType="number|text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/minLongitude"
            android:id="@+id/minLongitudeTV"
            android:textColor="@android:color/black"
            android:background="@drawable/border"
            android:typeface="monospace"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="-4dp"
            android:layout_marginTop="3dp" />

        <EditText
            android:layout_width="295dp"
            android:layout_height="33dp"
            android:id="@+id/minLongitudeET"
            android:inputType="number|text"
            android:textStyle="bold"
            android:background="@drawable/border3"
            android:textColorHighlight="@android:color/black"
            android:layout_marginTop="3dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/maxLongitude"
            android:id="@+id/maxLongitudeTV"
            android:textColor="@android:color/black"
            android:background="@drawable/border"
            android:typeface="monospace"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="-4dp" />

        <EditText
            android:layout_width="295dp"
            android:layout_height="33dp"
            android:id="@+id/maxLongitudeET"
            android:inputType="number|text"
            android:textStyle="bold"
            android:background="@drawable/border3"
            android:textColorHighlight="@android:color/black"
            android:textColor="@android:color/black"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="3dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/minDT"
            android:id="@+id/minDTTV"
            android:textColor="@android:color/black"
            android:background="@drawable/border"
            android:typeface="monospace"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="-4dp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="33dp"
            android:id="@+id/minDTET"
            android:inputType="text"
            android:textStyle="bold"
            android:background="@drawable/border3"
            android:textColorHighlight="@android:color/black"
            android:textColor="@android:color/black"
            android:layout_marginTop="3dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/maxDT"
            android:id="@+id/maxDTTV"
            android:textColor="@android:color/black"
            android:background="@drawable/border"
            android:typeface="monospace"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="-4dp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="33dp"
            android:id="@+id/maxDTET"
            android:inputType="text"
            android:textStyle="bold"
            android:background="@drawable/border3"
            android:textColorHighlight="@android:color/black"
            android:textColor="@android:color/black"
            android:layout_marginTop="3dp" />

        </LinearLayout>

</RelativeLayout>
